--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.5.2",
+    "googleapis": "^128.0.0",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
