--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@doist/todoist-api-typescript": "^3.0.0",
     "@prisma/client": "5.5.2",
     "googleapis": "^128.0.0",
     "next": "13.5.5",
