--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@doist/todoist-api-typescript": "^3.0.0",
     "@prisma/client": "5.5.2",
+    "chart.js": "^4.4.0",
     "googleapis": "^128.0.0",
     "next": "13.5.5",
     "react": "^18",
@@ -28,5 +29,9 @@
     "prisma": "^5.5.2",
     "tailwindcss": "^3",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
