--- a/package.json
+++ b/package.json
@@ -19,19 +19,25 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.10.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
     "postcss": "^8",
-    "prisma": "^5.5.2",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "resolutions": {
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
