--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@prisma/client": "5.5.2",
     "chart.js": "^4.4.0",
     "googleapis": "^128.0.0",
-    "next": "^14.0.3",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
