--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@doist/todoist-api-typescript": "^3.0.0",
+    "@google-cloud/local-auth": "^2.1.1",
     "@prisma/client": "5.5.2",
     "chart.js": "^4.4.0",
-    "googleapis": "^128.0.0",
+    "googleapis": "^105.0.0",
     "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "sqlite3": "^5.1.6",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
